--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,42 @@
 .App {
   text-align: center;
+  /* display: flex; */
 }
+.footer{
 
-.App-logo {
+}
+.footer_words{
+
+}
+.nav{
+
+}
+.nav_logo{
+
+}
+.nav_hackathon{
+
+}
+.nav_projects{
+
+}
+.nav_search{
+
+}
+.nav_address{
+
+}
+.nav_img_mine{
+
+}
+.nav_mine{
+  
+}
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -22,9 +47,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
 }
 
@@ -35,4 +60,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
