--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Avenir', Helvetica, Arial, sans-serif, Poppins;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: 'Avenir-Roman'; 
+  src: url(./assets/Avenir-Roman.otf) 
+}
+
+@font-face {
+  font-family: 'Poppins'; 
+  src: url(./assets/Poppins-Regular.ttf) 
+}
+
+@font-face {
+  font-family: 'DQHT'; 
+  src: url(./assets/DongQingHeiTi-1.otf) 
 }
