--- a/src/component/team/team.css
+++ b/src/component/team/team.css
@@ -5,3 +5,11 @@
     left: 55px;
     top: 148px;
 }
+
+.join_btn {
+    position: absolute;
+    width: 190px;
+    height: 60.32px;
+    left: 944px;
+    top: 193px;
+}
