--- a/src/component/hackathon/hackathon.css
+++ b/src/component/hackathon/hackathon.css
@@ -17,7 +17,7 @@
     height: 360px;
     left:0px;
     top:0px;
-    
+
 }
 
 .hackathon_name{
@@ -116,14 +116,14 @@
     height: 30px;
     left: 283px;
     top: 922px;
-    
+
     font-family: DQHT;
     font-style: normal;
     font-weight: 900;
     font-size: 20px;
     line-height: 30px;
     /* identical to box height, or 150% */
-    
+
     color: #999999;
 }
 
@@ -133,9 +133,9 @@
     height: 0px;
     left: 1px;
     top: 958px;
-    
+
     /* Grey/Gray/1 */
-    
+
     border: 1px solid #E3E1E3;
 }
 
@@ -145,9 +145,9 @@
     height: 0px;
     left: 132px;
     top: 958px;
-    
+
     border: 5px solid #06E1FF;
-    
+
 }
 
 .addh {
@@ -168,7 +168,15 @@
 .add_icon {
     position: absolute;
     left:569px;
-    top: 53.69px;
+    top: 70px;
+    width: 20px;
+    height: 20px;
+}
+
+.add_icon1 {
+    position: absolute;
+    left:650px;
+    top: 500px;
     width: 20px;
     height: 20px;
 }
