--- a/src/component/team/team.css
+++ b/src/component/team/team.css
@@ -8,10 +8,35 @@
 
 .join_btn {
     position: absolute;
+    width: 98px;
+    height: 23px;
+    left: 46px;
+    top: 19px;
+
+    font-family: DQHT Helvetica;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 22px;
+/* or 92% */
+
+
+    color: #FFFFFF;
+    cursor: pointer;
+
+    /* border: 1px solid #FFFFFF;
+    box-sizing: border-box; */
+}
+
+.join_team_button {
+    position: absolute;
     width: 190px;
     height: 60.32px;
     left: 944px;
-    top: 193px;
+    top: 131px;
+
+    background: #06E1FF;
+    border-radius: 30px;
 }
 
 .team_name{
@@ -91,11 +116,22 @@
 .project_intro{
     position: relative;
     width: 1208px;
-    height: 81px;
+    height:80px;
+    line-height: 80px;
     left: 50px;
     margin-top: 40px;
-    background: rgba(0, 87, 254, 0.08);
     text-align: center;
+    background: rgba(0, 87, 254, 0.08);
+    
+}
+
+.intro_font {
+    display: inline-block;
+    /* position: absolute;
+    left:461px;
+    top:28px; */
+    text-align: center;
+    vertical-align: middle;
     font-family: Helvetica;
     font-style: normal;
     font-weight: bold;
@@ -106,7 +142,7 @@
 
 .tech_stack{
     position: relative;
-    width: 500px;
+    width: 650px;
     height: 24px;
     left: 100px;
     margin-top: 0px;
@@ -126,10 +162,12 @@
     right: 20px;
     top: 0px;
     bottom: 20px;
+    width: 100px;
+    text-align: center;
 
     background: rgba(187, 196, 253, 0.2);
     border: 1px solid #0057FE;
-    border-radius: 29.5px;
+    border-radius: 19.5px;
 
     font-family: Helvetica;
     font-style: normal;
