--- a/src/component/team/team.css
+++ b/src/component/team/team.css
@@ -5,6 +5,14 @@
     left: 80px;
     top: 148px;
 }
+.icon1 {
+    position: relative;
+    width: 90px;
+    height: 90px;
+    left: 50px;
+    top: 20px;
+
+}
 
 .join_btn {
     position: absolute;
@@ -178,4 +186,122 @@
 
 
     color: #0057FE;
+}
+
+.team_declaration{
+    position: relative;
+    width: 1208px;
+    height: 81px;
+    left: 50px;
+    margin-top: 40px;
+    /*background: rgba(0, 87, 254, 0.08);*/
+
+
+    font-family: Helvetica;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    line-height: 60px;
+    /* or 120% */
+    color: #0057FE;
+}
+
+.details_project_intro {
+    position: absolute;
+    width: 1242px;
+    height: 840px;
+    left: 50px;
+
+    font-family: Helvetica;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 40px;
+    /* or 167% */
+
+
+    color: #000000;
+}
+
+.divider{
+    position: relative;
+    width: 109px;
+    height: 60px;
+    left: 50px;
+    margin-top:20px;
+
+    font-family: Helvetica;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 60px;
+    /* identical to box height, or 240% */
+
+
+    color: #06E1FF;
+
+    border: 1px solid #06E1FF;
+    box-sizing: border-box;
+}
+
+
+.divider1{
+    position: relative;
+    width: 109px;
+    height: 60px;
+    left: 50px;
+    margin-top:230px;
+
+    font-family: Helvetica;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 60px;
+    /* identical to box height, or 240% */
+
+
+    color: #06E1FF;
+
+    border: 1px solid #06E1FF;
+    box-sizing: border-box;
+}
+
+.people_name {
+    position: relative;
+    width: 346px;
+    height: 56px;
+    left: 45px;
+    margin-top: 50px;
+
+    font-family: Helvetica;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    /* or 140% */
+
+
+    color: #000000;
+}
+.people{
+    position: relative;
+    margin-left: 00px;
+    float: left;
+}
+.people_email{
+    position: relative;
+    width: 346px;
+    height: 56px;
+    left: 45px;
+    margin-top: 00px;
+
+    font-family: Helvetica;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    /* or 140% */
+
+
+    color: #000000;
 }
