--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
   top: 16px;
   border-radius: 0px;
   z-index: 1;
+  cursor: pointer;
 }
 
 .nav_logo{
@@ -59,6 +60,8 @@
   /* Black/1 */
 
   color: #2D2E36;
+
+  cursor: pointer;
 }
 .nav_hackathon{
   position: absolute;
