--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  position: absolute;
+  position: relative;
   left:0px;
   top:0px;
   /* display: flex; */
@@ -10,13 +10,13 @@
   position: relative;
   width: 315px;
   height: 26px;
-  left: 209.5px;
+  left: 100px;
   top: 71px;
 
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 24px;
 
   color: #2D2E36;
@@ -25,11 +25,10 @@
 
 .nav{
   position: absolute;
-  width: 1437px;
+  width: 98%;
   height: 88px;
   left: 0px;
   top: 16px;
-  display:'flex';
   justify-content: space-around;
 }
 
@@ -138,9 +137,10 @@
   position: absolute;
   width: 132px;
   height: 41px;
-  left: 1163px;
+  left: 1300px;
   top: 30px;
 
+  font-size: 20px;
   border: 1px solid #C4C4C4;
   box-sizing: border-box;
   border-radius: 10px;
@@ -148,7 +148,7 @@
 }
 .nav_img_mine{
   position: absolute;
-  left: 1318px;
+  left: 1480px;
   top: 36px;
   width: 24px;
   height: 24px;
@@ -157,23 +157,17 @@
 .nav_mine{
   position: absolute;
   height: 24px;
-  left: 94.44%;
-  right: 0.95%;
+  left: 1520px;
   top: 37px;
-
   cursor: pointer;
-
   font-family: DQHT;
   font-style: normal;
   font-weight: 300;
-  font-size: 12px;
-  line-height: 24px;
+  font-size: 20px;
+  line-height: 30px;
   /* identical to box height, or 200% */
-
   letter-spacing: -0.01px;
-
   color: #000000;
-  
 }
 /* .App-logo {
   height: 40vmin;
